--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
     <link rel="stylesheet" href="./public/css/style.css">
 </head>
 <body>
-    
-    <div class="container mt-5">
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Калькулятор веса по росту
-                </button>
-              </h2>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <div class="row">
-                        <div class="header__title">
-                            <h4>Входные даные</h4>
-                        </div>
+    <div class="container">
+        <div class="row">
+            <header id="header">
+                <h5 id="main__title" class="alert alert-primary">
+                    <span>Калькулятор веса по росту и возрасту</span>
+                    <div class="icon__arrow_down">
+                        <i class="bi bi-triangle-fill"></i>
                     </div>
+                </h5>
+            </header>
+            <main>
+                <div class="header__title">
+                    <h6 class="alert alert-primary">Входные даные</h6>
+                </div>
+                <div class="body__form">
                     <form class="form-control">
                         <div class="row mb-1">
                             <div class="col-2">Пол <sup>*</sup></div>
@@ -45,6 +44,7 @@
                                 </div>
                             </div>
                         </div>
+                        
                         <div class="row mb-1">
                             <div class="col-3">Вес.кг <sup>*</sup></div>
                             <div class="col-3"></div>
@@ -63,7 +63,6 @@
                                         class="form-control growth"
                                         id="formGroupExampleInput"
                                         placeholder="Рост.см"
-                                        pattern='[<?;"a-zA-Z]*'
                                         required>
                             </div>
                         </div>
@@ -74,21 +73,18 @@
                                 <input type="text" class="form-control age" id="formGroupExampleInput" placeholder="Возраст.лет">
                             </div>
                         </div>
+                        <button class="btn btn-primary" type="submit">Рассчитать</button>
                         <div class="row">
-                            <div class="result alert alert-success">
+                            <div class="result alert mt-5">
 
                             </div>
                         </div>
-                        <button class="btn btn-success" type="submit">Рассчитать</button>
                     </form>
                 </div>
-              </div>
-            </div>
+            </main>
         </div>
         <img src="./public/img/fotografiya_visokogo_razresheniya.jpg" alt="fotografiya_visokogo_razresheniya" class="img-fluid mt-3">
     </div>
-    <!-- <script src="./public/js/jquery-3.5.1.min.js"></script> -->
-    <script src="./public/js/bootstrap.js"></script>
     <script src="./public/js/app.js"></script>
 </body>
 </html>
